Fixed Toc Heading alignment

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -2376,6 +2376,9 @@ body {
       margin: 0 0 0.75em;
       padding: 0 0 0 1.2em;
       font-weight: 400;
+      p{
+        display: inline-block;
+      }
       &::before {
         content: '';
         display: inline-block;
@@ -3286,6 +3289,9 @@ body {
     li {
       font-size: 16px;
       line-height: 1.8;
+      p{
+        display: inline-block;
+      }
       a {
         display: inline-block;
         color: #333;
